// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Legacy Content - Peer - Filter Aggregate Component should NOT be disabled if the aggregate Count is 0 and Selected is true 1`] = `
<pf-filter-aggregate
  aggregate={[Function Object]}
  aggregateSelected={[Function EventEmitter]}
>
  <div
    class="option selected"
    title="MockItem"
  >
    <div
      class="option-check"
    >
      <input
        type="checkbox"
      />
       MockItem 
    </div>
    <div
      class="option-count"
    >
       0 
    </div>
  </div>
</pf-filter-aggregate>
`;

exports[`Legacy Content - Peer - Filter Aggregate Component should be disabled if the aggregate Count is 0 and Selected is false 1`] = `
<pf-filter-aggregate
  aggregate={[Function Object]}
  aggregateSelected={[Function EventEmitter]}
>
  <div
    class="option disabled"
    title="MockItem"
  >
    <div
      class="option-check"
    >
      <input
        disabled=""
        type="checkbox"
      />
       MockItem 
    </div>
    <div
      class="option-count"
    >
       0 
    </div>
  </div>
</pf-filter-aggregate>
`;
